vcs/specs/parser/fail/expressions/invalid_closure_param.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, closure, param, error
// @description: Closure parameters missing comma separator
// @expected-error: E018

fn test() {
    let f = |x y| x + y;  // Missing comma between parameters
}
